--- a/configs/demo.yaml
+++ b/configs/demo.yaml
@@ -3,8 +3,8 @@
   - name: yaml_test
   - nb_samples: 100
   - train_val_split: 0.75
-  - train_dir: /home/ilias-m/Documents/DATASETS/LATIM/objects/train/
-  - val_dir: /home/ilias-m/Documents/DATASETS/LATIM/objects/val/
+  - train_dir: ../objects/train/
+  - val_dir: ../objects/val/
 - camera: !!omap
   - resolution:
     - 1024
@@ -17,4 +17,4 @@
     - 640
     - 640
   - background_path: /home/ilias-m/Documents/DATASETS/LATIM/background_images
-- save_conf_name: test_0.yaml
+- save_conf_name: configs/demo.yaml
